unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/ETT_Work_Station_Checklist__c.object-meta.xml
<CustomObject>
    <label>Work Station Checklist</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Checklist Ref. No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Station Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>