unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Bag_Replacement_Reason__c.field-meta.xml
<CustomField>
    <fullName>Bag_Replacement_Reason__c</fullName>
    <label>Bag Replacement Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bag Full</fullName>
            </value>
            <value>
                <fullName>Bag Damage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>