unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Buffer_Setting_Reason__c.field-meta.xml
<CustomField>
    <fullName>Buffer_Setting_Reason__c</fullName>
    <label>Buffer Setting Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rim Change</fullName>
            </value>
            <value>
                <fullName>Radius Setting</fullName>
            </value>
            <value>
                <fullName>Bead Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>