unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Buffing_Blade__c.field-meta.xml
<CustomField>
    <fullName>Buffing_Blade__c</fullName>
    <label>Buffing Blade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NotGood_Good</valueSetName>
    </valueSet>
</CustomField>