unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Buffing_Powder_Bag_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Buffing_Powder_Bag_Replacement__c</fullName>
    <label>Buffing Powder Bag Replacement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>