unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Control_Panel_Board_Condition__c.field-meta.xml
<CustomField>
    <fullName>Control_Panel_Board_Condition__c</fullName>
    <label>Control Panel Board Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NotGood_Good</valueSetName>
    </valueSet>
</CustomField>