unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Curing_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Curing_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Curing Remarks</label>
    <type>TextArea</type>
</CustomField>