unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Curing_Tube_Status__c.field-meta.xml
<CustomField>
    <fullName>Curing_Tube_Status__c</fullName>
    <label>Curing Tube Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NotGood_Good</valueSetName>
    </valueSet>
</CustomField>