unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Cutting_Stone_Status__c.field-meta.xml
<CustomField>
    <fullName>Cutting_Stone_Status__c</fullName>
    <label>Cutting Stone Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NotGood_Good</valueSetName>
    </valueSet>
</CustomField>