unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Envelop_Spreader_Machine_Condition__c.field-meta.xml
<CustomField>
    <fullName>Envelop_Spreader_Machine_Condition__c</fullName>
    <label>Envelop Spreader Machine Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NotGood_Good</valueSetName>
    </valueSet>
</CustomField>