unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Filling_Machine_Temp__c.field-meta.xml
<CustomField>
    <fullName>Filling_Machine_Temp__c</fullName>
    <label>Filling Machine Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Correct</fullName>
            </value>
            <value>
                <fullName>Not Correct</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>