unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Gaugs_Vacuum_Pressure_Condition__c.field-meta.xml
<CustomField>
    <fullName>Gaugs_Vacuum_Pressure_Condition__c</fullName>
    <label>Gaugs Vacuum Pressure Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NotGood_Good</valueSetName>
    </valueSet>
</CustomField>