unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Motorized_Inspection_Spreader__c.field-meta.xml
<CustomField>
    <fullName>Motorized_Inspection_Spreader__c</fullName>
    <label>Motorized Inspection Spreader</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NotGood_Good</valueSetName>
    </valueSet>
</CustomField>