unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Rim_Plate_Condition__c.field-meta.xml
<CustomField>
    <fullName>Rim_Plate_Condition__c</fullName>
    <label>Rim &amp; Plate Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NotGood_Good</valueSetName>
    </valueSet>
</CustomField>