unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Side_Buffer_Condition__c.field-meta.xml
<CustomField>
    <fullName>Side_Buffer_Condition__c</fullName>
    <label>Side Buffer Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NotGood_Good</valueSetName>
    </valueSet>
</CustomField>