unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Side_Buffer_Reason__c.field-meta.xml
<CustomField>
    <fullName>Side_Buffer_Reason__c</fullName>
    <label>Side Buffer Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blade Change</fullName>
            </value>
            <value>
                <fullName>Wire Brush Change</fullName>
            </value>
            <value>
                <fullName>Counter Wheel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>