unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>