unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Station_Type__c.field-meta.xml
<CustomField>
    <fullName>Station_Type__c</fullName>
    <formula>Text(Work_Station__r.ETT_Station_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Station Type</label>
    <type>Text</type>
</CustomField>