unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Tyre_Rimming_Machine__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Rimming_Machine__c</fullName>
    <label>Tyre Rimming Machine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NotGood_Good</valueSetName>
    </valueSet>
</CustomField>