unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Valve_Number__c.field-meta.xml
<CustomField>
    <fullName>Valve_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Valve Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>