unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Work_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Work_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Schedule</label>
    <referenceTo>ETT_Work_Schedule__c</referenceTo>
    <relationshipLabel>Work Station Checklists</relationshipLabel>
    <relationshipName>Work_Station_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>