unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/Work_Station__c.field-meta.xml
<CustomField>
    <fullName>Work_Station__c</fullName>
    <label>Work Station</label>
    <referenceTo>ETT_Work_Station__c</referenceTo>
    <relationshipLabel>Work Station Checklists</relationshipLabel>
    <relationshipName>Work_Station_Checklists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>