unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/x13_Inflation_Pressure__c.field-meta.xml
<CustomField>
    <fullName>x13_Inflation_Pressure__c</fullName>
    <label>13 Inflation Pressure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NotGood_Good</valueSetName>
    </valueSet>
</CustomField>