unpackaged/main/default/objects/ETT_Work_Station_Checklist__c/fields/X13_Vacuum_Pressure_Valve_Condition__c.field-meta.xml
<CustomField>
    <fullName>X13_Vacuum_Pressure_Valve_Condition__c</fullName>
    <label>13 Vacuum Pressure Valve Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NotGood_Good</valueSetName>
    </valueSet>
</CustomField>